header design and menu expanding / collapsing logic fixing

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -50,7 +50,7 @@
 				position: absolute;
 				background-color: $colorWhite;
 				left: 0;
-				top: 90px;
+				top: 40px;
 				z-index: 1;
 			}
 
